# write-powerful-macros

./: Cargo.toml  README.md
analyze-macro/: Cargo.toml
analyze-macro/src/: lib.rs
builder-macro/: Cargo.toml
builder-macro/src/: lib.rs
config-macro/: Cargo.toml
config-macro/src/: input.rs  lib.rs  output.rs
configuration/: config.yaml
iac-macro/: Cargo.toml
iac-macro/src/: lib.rs
public-macro/: Cargo.toml
public-macro/src/: lib.rs
result-macro/: Cargo.toml
result-macro/src/: lib.rs
src/tests/: analyze.rs  builder.rs  config.rs  mod.rs  public.rs
test-data/configuration/: config.yaml
